src/codegen/tests/snapshots/rusty__codegen__tests__cfc_tests__conditional_return_negated.snap
---
source: src/codegen/tests/cfc_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%conditional_return = type { i32 }

@__conditional_return__init = external global %conditional_return

define void @conditional_return(%conditional_return* %0) {
entry:
  %val = getelementptr inbounds %conditional_return, %conditional_return* %0, i32 0, i32 0
  %load_val = load i32, i32* %val, align 4
  %tmpVar = icmp eq i32 %load_val, 5
  %tmpVar1 = xor i1 %tmpVar, true
  br i1 %tmpVar1, label %then_block, label %else_block

then_block:                                       ; preds = %entry
  ret void

else_block:                                       ; preds = %entry
  store i32 10, i32* %val, align 4
  ret void
}

